--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.18",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
